objects/Partner__c.object
<CustomObject>
    <description>This oject will contain a list of Tier 1 Partner which includes woman owned, verteran owned etc . . .</description>
    <fields>
        <fullName>AOPS_Master_Code_Created__c</fullName>
        <formula>CreatedDate - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AOPS Master Code Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>A_R_Collector__c</fullName>
        <label>A/R Collector</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <description>Partner Address Line 1</description>
        <label>Address 1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <description>Partner Address Line 2</description>
        <label>Address 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBS_LY__c</fullName>
        <description>CBS_LY__c</description>
        <label>CBS LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CBS_TY__c</fullName>
        <description>CBS_TY__c</description>
        <label>CBS TY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPD_LY__c</fullName>
        <description>CPD_LY__c</description>
        <label>CPD LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPD_TY__c</fullName>
        <description>CPD_TY__c</description>
        <label>CPD TY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Catalog_Requirements_Determined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Catalog Requirements Determined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certifications_Received__c</fullName>
        <label>Certifications Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Partner City</description>
        <label>City</label>
        <length>85</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                    <default>true</default>
                    <label>USA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Decision__c</fullName>
        <label>Credit Decision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Department_Assessment_Requested__c</fullName>
        <label>Credit Department Assessment Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Certifications__c</fullName>
        <description>Contains a list of comma(,) delimited certificates assigned to the partner</description>
        <label>Current Certifications</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Product_Offering__c</fullName>
        <description>Current Product Offering by Partner</description>
        <label>Current Product Offering</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Supplies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Count__c</fullName>
        <description>Count of Accounts associated to the Partner</description>
        <label>Customer Count</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diversity_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Diversity programs Sales Representative</description>
        <label>Diversity Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tier_1_Partner_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Diversity_Managers_Salesperson_ID__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Diversity Managers Salesperson ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclusive_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Exclusive to Office Depot - only sells through Office Depot</description>
        <label>Exclusive Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Executed_Partner_Agreement_1_Received__c</fullName>
        <label>Executed Partner Agreement 1 Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Executed_Partner_Agreement_2_Received__c</fullName>
        <label>Executed Partner Agreement 2 Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Executed_Partner_Agreement_3_Received__c</fullName>
        <label>Executed Partner Agreement 3 Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Filing_Binding_LY__c</fullName>
        <description>Filing_Binding_LY__c</description>
        <label>Filing Binding LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Filing_Binding_TY__c</fullName>
        <description>Filing_Binding_TY__c</description>
        <label>Filing Binding TY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finance_Setup_in_Oracle__c</fullName>
        <label>Finance Setup in Oracle</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Furniture_LY__c</fullName>
        <description>Furniture_LY__c</description>
        <label>Furniture LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Furniture_TY__c</fullName>
        <description>Furniture_TY__c</description>
        <label>Furniture TY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Implementation_Mgr_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Mgr Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Diversity_Partners_Resellers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ink_Toner_LY__c</fullName>
        <description>Ink_Toner_LY__c</description>
        <label>Ink Toner LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ink_Toner_TY__c</fullName>
        <description>Ink_Toner_TY__c</description>
        <label>Ink Toner TY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labels_Forms_LY__c</fullName>
        <description>Labels_Forms_LY__c</description>
        <label>Labels Forms LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labels_Forms_TY__c</fullName>
        <description>Labels_Forms_TY__c</description>
        <label>Labels Forms TY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Logo_Location__c</fullName>
        <description>URL for Logo for Partner</description>
        <label>Logo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <formula>IF(ISBLANK(Logo_Location__c),&quot;&quot;,IMAGE( Logo_Location__c , Name ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPS_LY__c</fullName>
        <description>MPS_LY__c</description>
        <label>MPS LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPS_TY__c</fullName>
        <description>MPS_TY__c</description>
        <label>MPS TY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_Sales_LY_IMU__c</fullName>
        <description>MTD_Sales_LY_IMU2</description>
        <label>MTD Sales LY IMU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_Sales_LY__c</fullName>
        <description>MTD_Sales_LY</description>
        <label>MTD Sales LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_Sales_TY_IMU__c</fullName>
        <description>MTD_Sales_TY_IMU2</description>
        <label>MTD Sales TY IMU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_Sales_TY__c</fullName>
        <description>MTD_Sales_TY</description>
        <label>MTD Sales TY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Master_Code__c</fullName>
        <description>This is AOPS code that drives the partner branded website, packing slips and shipping labels.</description>
        <externalId>true</externalId>
        <label>Partner AOPS Master Code</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Miscellaneous_LY__c</fullName>
        <description>Miscellaneous_LY__c</description>
        <label>Miscellaneous LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_TY__c</fullName>
        <description>Miscellaneous_TY__c</description>
        <label>Miscellaneous TY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NDA_Executed__c</fullName>
        <label>NDA Executed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notified_Div_Mgr_to_Start_Negotiations__c</fullName>
        <label>Notified Div Mgr to Start Negotiations</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Office_Essentials_LY__c</fullName>
        <description>Office_Essentials_LY__c</description>
        <label>Office Essentials LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Office_Essentials_TY__c</fullName>
        <description>Office_Essentials_TY__c</description>
        <label>Office Essentials TY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <description>Aggregate Opportunity Amount associated to the accounts associated to the partner</description>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Count__c</fullName>
        <description>Number of Opportunities associated with the accounts associated to this partner</description>
        <label>Opportunity Count</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ordering_Banners__c</fullName>
        <description>Where partner accounts currently exists.</description>
        <label>Ordering Banners</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Office Depot North</fullName>
                </value>
                <value>
                    <fullName>Office Depot South</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paper_LY__c</fullName>
        <description>Paper_LY__c</description>
        <label>Paper LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paper_TY__c</fullName>
        <description>Paper_TY__c</description>
        <label>Paper TY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Agreement_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Agreement 1</label>
        <referenceTo>Partner_Contract__c</referenceTo>
        <relationshipLabel>Diversity Partners / Resellers</relationshipLabel>
        <relationshipName>Diversity_Partners_Resellers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Agreement_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Agreement 2</label>
        <referenceTo>Partner_Contract__c</referenceTo>
        <relationshipLabel>Diversity Partners / Resellers (Partner Agreement 2)</relationshipLabel>
        <relationshipName>Diversity_Partners_Resellers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Agreement_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Agreement 3</label>
        <referenceTo>Partner_Contract__c</referenceTo>
        <relationshipLabel>Diversity Partners / Resellers (Partner Agreement 3)</relationshipLabel>
        <relationshipName>Diversity_Partners_Resellers2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Email__c</fullName>
        <description>Email for Partner</description>
        <label>Partner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner_Legacy_Realtionship__c</fullName>
        <label>Partner Legacy Realtionship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Office Depot South</fullName>
                </value>
                <value>
                    <fullName>Office Depot North</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Migration_Status__c</fullName>
        <label>Partner Migration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Done - Partner on destination stack</fullName>
                </value>
                <value>
                    <fullName>Ready to Migrate</fullName>
                </value>
                <value>
                    <fullName>Not Ready to Migrate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Tenure_Yr__c</fullName>
        <description>To calculate how many year a diversity partner has been with us.</description>
        <formula>( TODAY() - Relationship_Start_Date__c ) / 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Tenure (Yr)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Website__c</fullName>
        <description>Partner branded website</description>
        <label>Partner Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Phone_Text__c</fullName>
        <description>Phone number in Text - AlphaNumeric</description>
        <label>Phone Text</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>IT Stack/Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Office  Depot South</fullName>
                </value>
                <value>
                    <fullName>Office  Depot North</fullName>
                </value>
                <value>
                    <fullName>Both Office  Depot South and Office  Depot North</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_Qual_Received__c</fullName>
        <label>Pre-Qual Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prospect_Package_Sent__c</fullName>
        <label>Prospect Package Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QTD_Sales_LY_IMU__c</fullName>
        <description>QTD_Sales_LY_IMU2</description>
        <label>QTD Sales LY IMU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QTD_Sales_LY__c</fullName>
        <description>QTD_Sales_LY</description>
        <label>QTD Sales LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QTD_Sales_TY_IMU__c</fullName>
        <description>QTD_Sales_TY_IMU2</description>
        <label>QTD Sales TY IMU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QTD_Sales_TY__c</fullName>
        <description>QTD_Sales_TY</description>
        <label>QTD Sales TY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Relationship_Start_Date__c</fullName>
        <description>Start date of partner to legacy company</description>
        <label>Relationship Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <description>This field specifies the type of Partner</description>
        <label>Relationship Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Customer Marketplace</fullName>
                </value>
                <value>
                    <fullName>Federal Reseller</fullName>
                </value>
                <value>
                    <fullName>Federation/Acquisition Cross Company Sourcing</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2 Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sector_s__c</fullName>
        <label>Sector(s)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Public &amp; Private</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Partner State</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
                <value>
                    <fullName>NY</fullName>
                </value>
                <value>
                    <fullName>OH</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>SD</fullName>
                </value>
                <value>
                    <fullName>TN</fullName>
                </value>
                <value>
                    <fullName>TX</fullName>
                </value>
                <value>
                    <fullName>WA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sweep_Account_Bank__c</fullName>
        <label>Sweep Account Bank</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fifth Third</fullName>
                </value>
                <value>
                    <fullName>Comerica</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech_LY__c</fullName>
        <description>Tech_LY__c</description>
        <label>Tech LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tech_Phone__c</fullName>
        <description>Phone number for Tier 1 Technical Support</description>
        <label>Tech Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tech_TY__c</fullName>
        <description>Tech_TY__c</description>
        <label>Tech TY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Writing_Drafting_LY__c</fullName>
        <description>Writing_Drafting_LY__c</description>
        <label>Writing Drafting LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Writing_Drafting_TY__c</fullName>
        <description>Writing_Drafting_TY__c</description>
        <label>Writing Drafting TY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2_Yrs_Financial_Records_Received__c</fullName>
        <label>2 Yrs Financial Records Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>YTD_LY_Account_Totals__c</fullName>
        <description>This field is an aggregate of all associated accounts YTD LY Sales.</description>
        <inlineHelpText>This field is an aggregate of all associated accounts YTD LY Sales.</inlineHelpText>
        <label>YTD LY Account Totals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Sales_LY_IMU__c</fullName>
        <description>YTD_Sales_LY_IMU2</description>
        <label>YTD Sales LY IMU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Sales_LY__c</fullName>
        <description>YTD_Sales_LY</description>
        <label>YTD Sales LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Sales_TY_IMU__c</fullName>
        <description>YTD_Sales_TY_IMU2</description>
        <label>YTD Sales TY IMU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Sales_TY__c</fullName>
        <description>YTD_Sales_TY</description>
        <label>YTD Sales TY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_TY_Account_Totals__c</fullName>
        <description>This field is an aggregate of all associated accounts YTD TY Sales.</description>
        <inlineHelpText>This field is an aggregate of all associated accounts YTD TY Sales.</inlineHelpText>
        <label>YTD TY Account Totals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>Partner Zip Code</description>
        <label>Zip Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ePS_Account_Mgr_Assigned__c</fullName>
        <label>ePS Account Mgr Assigned</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Diversity Partner / Reseller</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Relationship_Type__c</columns>
        <columns>Diversity_Manager__c</columns>
        <columns>Customer_Count__c</columns>
        <columns>YTD_Sales_TY__c</columns>
        <columns>YTD_Sales_LY__c</columns>
        <columns>Opportunity_Count__c</columns>
        <columns>Opportunity_Amount__c</columns>
        <columns>Partner_Migration_Status__c</columns>
        <columns>Current_Certifications__c</columns>
        <columns>Master_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Diversity Partner / Reseller Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Diversity Partners / Resellers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>